--- a/index.ipynb
+++ b/index.ipynb
@@ -25,7 +25,7 @@
     "## Business Understanding/Problem\n",
     "Customer satisfaction is a critical aspect in the airline industry that quickly and directly impacts customer retention or customer drop off.\n",
     "\n",
-    "The airline company is experiencing a significant decrease in customer retention. Forthwith, by predicting whether a passenger experiences satisfaction/dissatisfaction we will be able to identiify factors contributing to passenger dissatisfaction thus drawing actionable insights and recommendations to improve customer experience and reduce customer drop off.\r\n"
+    "The airline company is experiencing a significant decrease in customer retention. By predicting whether a passenger experiences satisfaction/dissatisfaction, we will be able to determine some factors contributing to passenger dissatisfaction thus drawing actionable insights and recommendations to improve customer experience and reduce customer drop off.\r\n"
    ]
   },
   {
@@ -1345,7 +1345,7 @@
    "id": "c3731d66-ba1e-43a3-9898-b3183ccdfe6a",
    "metadata": {},
    "source": [
-    "## Modelling\n",
+    "## Modeling\n",
     "We shall proceed by building models which will aid in predicting customer drop off based on customer satisfaction. For starters, we will perform a train test split with `30 %` going to testing and `70 %` for training."
    ]
   },
