--- a/index.ipynb
+++ b/index.ipynb
@@ -1251,7 +1251,7 @@
    "id": "98b8c585-7c84-4593-86e2-f8fac0553604",
    "metadata": {},
    "source": [
-    "Below we shall visualize target variable distribution to check for imbalance."
+    "Below we shall visualize target variable distribution."
    ]
   },
   {
@@ -1334,9 +1334,9 @@
    "source": [
     "**Some key observations made :**\n",
     "\n",
-    "* Most of the loyal customers are by far more satisfied than the disloyal customers.\n",
+    "* Most of the loyal customers actually experience dissatisfaction.\n",
     "* Business travellers are noticeably more satisfied customers than those travelling for individual reasons.\n",
-    "* Amongst various classes, it is indeed common to see that passengers in more exclusive classes(`Business`) having a higher portion of satisfied customers compared to lower less exclusive classes(`Economy`).\n",
+    "* Amongst various classes as we can see, it is indeed common to see that passengers in more exclusive classes(`Business`) having a higher portion of satisfied customers compared to lower less exclusive classes(`Economy`).\n",
     "* Gender seems to be balanced out with close to a similar number of satisfied customers for each gender respectively as well as dissatisfied customers."
    ]
   },
